--- a/index.html
+++ b/index.html
@@ -23,16 +23,22 @@
                         <li><a href="/">Kontak</a></li>
                     </ul>
                 </div>
-                <div class="menu">
+                <div class="menu" id="menu" onclick="menu()">
                     <span></span>
                     <span></span>
                     <span></span>
                 </div>
+                <div class="nav-mobile" id="nav-mobile">
+                    <ul>
+                        <li><a href="/">Beranda</a></li>
+                        <li><a href="/">Tentang Kami</a></li>
+                        <li><a href="/">Layanan</a></li>
+                        <li><a href="/">Testimoni</a></li>
+                        <li><a href="/">Kontak</a></li>
+                    </ul>
+                </div>
             </nav>
         </header>
-        <main>
-            <h1>test 9</h1>
-        </main>
     </div>
 </body>
 </html>
