add hero section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
                 </div>
             </nav>
         </header>
+        <main>
+            <div class="hero-section">
+                <div class="hero-text">
+                    <h1>Menyatu dalam <span>Kelembutan</span> & Kilaukan <span>Keindahan</span></h1>
+                    <p>Kami percaya bahwa pakaian yang bersih adalah cerminan dari diri Anda yang terbaik. Dengan sepenuh hati, kami berkomitmen untuk memberikan layanan laundry terbaik bagi Anda dan pakaian kesayangan Anda.</p>
+                    <div class="hero-button">
+                        <button>Tentang Kami</button>
+                        <button>Layanan</button>
+                    </div>
+                </div>
+                <div class="hero-img">
+                    <img src="assets/images/hero-images.png" alt="hero-images">
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 </html>
